2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Fix Savannah #63377.

	* tmac/doc.tmac (Nm): Properly leverage new
	`doc-in-name-section` variable.  Set page topic `doc-topic-name`
	to the first encountered argumentful `Nm` call in the "Name"
	section while handling other "Name" section concerns, instead of
	later after deciding we're not in the "Synopsis" section.
	Problem caused by me when fixing antediluvian mdoc bug in commit
	0d85615c62, 5 November.

	Fixes <https://savannah.gnu.org/bugs/?63380>.  Thanks to John
	Gardner for the report.

2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Add tests for `Nm` macro.

	* tmac/tests/doc_Nm-works.sh: Do it.  Test regression reported
	in Savannah #63377.  Also ensure that we handle the case where
	multiple `Nm` items are declared in the "Name" section (as might
	happen in library man pages).
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/papersize.tmac: Improve integration with mm(7) macro
	package.  If a paper format has been selected, set `W` register
	to new line length (if not already set on command line).
	Similarly, set `O` register to 1 inch for the symmetric
	horizontal margins otherwise assumed by this macro file.  This
	means that "groff -mm" and "groff -dpaper=letter -mm" are _not_
	synonymous (when groff is configured to use U.S. letter as the
	default paper format), because groff mm(7) uses a page offset of
	0.963 inches on typesetters for compatibility with DWB mm.
	* NEWS: Add item.

	See discussion in <https://lists.gnu.org/archive/html/\
	groff/2022-11/msg00081.html> and (some) follow-ups.

2022-11-16  Deri James  <deri@chuzzlewit.myzen.co.uk>

	* src/devices/gropdf/gropdf.pl: If the argument to the paper
	format option '-p' matches a recognized format but includes a
	trailing 'L' or 'l' ("legalL" or "a4l", for example), rotate the
	document's MediaBox.
